third attempt at fixing horizontal overflow bug in the mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -87,8 +87,9 @@ nav li a{
 }
 
 .root{
-  width:100vw;
-  position:fixed;
+  /* width:100vw;
+  position:fixed; */
+  overflow-x:hidden;
 }
 
 .container{
